Добавлена аннотация ApplicationLogProvider и FXController. Добавлена возможность загрузки контроллеров через context. Удален JavaFXApplicationExecutorService.