@@ -6,7 +6,10 @@ import javafx.scene.layout.AnchorPane;
 import ru.hzerr.fx.core.application.theme.DarkThemeMetaData;
 import ru.hzerr.fx.core.application.theme.WhiteThemeMetaData;
 import ru.hzerr.fx.engine.core.FXEngine;
+import ru.hzerr.fx.engine.core.annotation.ApplicationLogProvider;
+import ru.hzerr.fx.engine.core.annotation.FXController;
 import ru.hzerr.fx.engine.core.annotation.FXEntity;
+import ru.hzerr.fx.engine.core.annotation.Registered;
 import ru.hzerr.fx.engine.core.entity.Controller;
 import ru.hzerr.fx.engine.core.language.Localization;
 import ru.hzerr.fx.engine.core.theme.ResolveThemeException;
@@ -14,8 +17,10 @@ import ru.hzerr.fx.engine.logging.factory.ILogProvider;
 
 import java.util.Locale;
 
+@Registered
+@FXController
 @FXEntity(fxml = "main.fxml", internationalization = "main.json", theme = "main.css")
-public class FXController extends Controller {
+public class BaseController extends Controller {
 
     @FXML
     private Button changeLocalization;
@@ -26,22 +31,22 @@ public class FXController extends Controller {
     @FXML
     private Button destroy;
 
-    private final ILogProvider logProvider = FXEngine.getContext().getApplicationLogProvider();
+    private ILogProvider logProvider;
 
     @Override
     public void onInit() {
-        destroy.setOnAction(event -> FXEngine.getContext().getScene().setRoot(new AnchorPane()));
-        changeLocalization.setOnAction(event -> {
+        destroy.setOnAction(_ -> FXEngine.getContext().getScene().setRoot(new AnchorPane()));
+        changeLocalization.setOnAction(_ -> {
             logProvider.getLogger().debug("Текущий язык '" + FXEngine.getContext().getApplicationConfiguration().getLocale().getLanguage() + "'");
             if (FXEngine.getContext().getApplicationConfiguration().getLocale().equals(Locale.ENGLISH)) {
-                FXEngine.getContext().getApplicationManager().setLanguage(new Locale("ru", "RU"));
+                FXEngine.getContext().getApplicationManager().setLanguage(Locale.of("ru", "RU"));
                 logProvider.getLogger().debug("Язык приложения изменен на 'Русский'");
             } else {
                 FXEngine.getContext().getApplicationManager().setLanguage(Locale.ENGLISH);
                 logProvider.getLogger().debug("Язык приложения изменен на 'English'");
             }
         });
-        changeTheme.setOnAction((e) -> {
+        changeTheme.setOnAction(_ -> {
             // TODO: 12.11.2023 ДОПИСАТь
             if (FXEngine.getContext().getApplicationConfiguration().getThemeName().equals("White")) {
                 try {
@@ -69,5 +74,10 @@ public class FXController extends Controller {
     @Override
     protected String id() {
         return "main";
+    }
+
+    @ApplicationLogProvider
+    public void setLogProvider(ILogProvider logProvider) {
+        this.logProvider = logProvider;
     }
 }
